compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:45:46: error: ‘endl’ was not declared in this scope
         std::cerr<<"A vonal adatai: "<<line<<endl;
                                              ^~~~
/main.cpp:45:46: note: suggested alternative:
In file included from /usr/include/c++/8/iostream:39,
                 from /main.cpp:4:
/usr/include/c++/8/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^~~~